# mfcuk

./: .gitignore  Makefile.am  MifareClassicDefaultKeys.md  MifareClassicEnabledPhones.md  MifareClassicFullSoftTagEmulation.md  MifareClassicKnownCardsDataFormat.md  ProjectHome.md  README  TODO  configure.ac
bin_old/: libnfc.lib
src/: Makefile.am  build_cygwin.sh  crapto1.c  crapto1.h  mfcuk.c  mfcuk.h  mfcuk_finger.c  mfcuk_finger.h  mfcuk_keyrecovery_darkside.c  mfcuk_mifare.c  mfcuk_mifare.h  mfcuk_utils.c  mfcuk_utils.h  mifare.c  nfc-utils.c  xgetopt.c  xgetopt.h
src/data/logs_proxmark3/: trace3.txt
src/data/tmpls_fingerprints/: mfcuk_tmpl_ratb.mfd  mfcuk_tmpl_skgt.mfd
tags/mfcuk-0.3.6/: TODO
tags/mfcuk-0.3.6/src/: mfcuk_utils.c
tags/mfcuk-0.3.6/tools/: proxmark3_parser.py
tags/mfcuk-0.3.7/src/: mfcuk_finger.c  mfcuk_utils.h  xgetopt.h
tags/mfcuk-0.3.7/src/data/tmpls_fingerprints/: mfcuk_tmpl_oyster.mfd
tags/mfcuk-0.3.8/: AUTHORS  README  configure.ac
tags/mfcuk-0.3.8/src/: Makefile.am  mfcuk.h  mfcuk_mifare.c
tags/mfcuk-0.3.8/src/data/logs_proxmark3/: trace1.txt
trunk/: AUTHORS  INSTALL  configure.ac
trunk/src/: Makefile.am  build_cygwin.sh  crapto1.c  crapto1.h  mfcuk.c  mfcuk.h  mfcuk_finger.c  mfcuk_finger.h  mfcuk_keyrecovery_darkside.c  mfcuk_keyrecovery_darkside.h  mfcuk_mifare.c  mfcuk_mifare.h  mfcuk_utils.c  mfcuk_utils.h  nfc-utils.c  pm3_mfc_parser.py  xgetopt.c  xgetopt.h
trunk/src/data/logs_proxmark3/: trace2.txt
wiki/: MifareClassicDefaultKeys.wiki  MifareClassicEnabledPhones.wiki  MifareClassicFullSoftTagEmulation.wiki  MifareClassicKnownCardsDataFormat.wiki
