bin_PROGRAMS = mfcuk_keyrecovery_darkside

# set the include path found by configure
mfcuk_keyrecovery_darkside_SOURCES = mfcuk_keyrecovery_darkside.c mfcuk_mifare.c mfcuk_utils.c mfcuk_finger.c crapto1.c crypto1.c
mfcuk_keyrecovery_darkside_LDADD = -lnfc -lusb -lpcsclite

# dist_man_MANS = mfcuk_keyrecovery_darkside.1
